// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuIcon: Component should render correctly 1`] = `
<menu.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`MenuIcon: Component should render with custom styles 1`] = `
<menu.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
